--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
     "postcss": "^8.4.4",
+    "sass": "^1.53.0",
+    "sass-loader": "^10.3.0",
     "vue-jest": "^3.0.4"
   }
 }
