--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "lottie-web": "^5.12.2",
     "nuxt": "^2.15.8",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
