--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "core-js": "^3.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -34,5 +35,13 @@
     "sass": "^1.53.0",
     "sass-loader": "^10.3.0",
     "vue-jest": "^3.0.4"
-  }
+  },
+  "description": "## Build Setup",
+  "main": "jest.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
